[gd_scene load_steps=12 format=3 uid="uid://bo350h1i2l8g0"]

[ext_resource type="Script" path="res://enemy/red_soldier.gd" id="1_qpwe2"]
[ext_resource type="Texture2D" uid="uid://coff3u63i63pe" path="res://graphics/red_soldier.png" id="2_l1pdt"]
[ext_resource type="PackedScene" uid="uid://buu2b0b36hlqs" path="res://modules/hp_module.tscn" id="3_0kwgf"]
[ext_resource type="PackedScene" uid="uid://lt711d6lkg14" path="res://modules/hitbox_module.tscn" id="4_71tfk"]
[ext_resource type="Script" path="res://enemy/moveto_module.gd" id="4_i6dln"]
[ext_resource type="PackedScene" uid="uid://cobt3f4jf312b" path="res://enemy/state_machine.tscn" id="5_gp62a"]
[ext_resource type="Script" path="res://enemy/idle.gd" id="6_h0cxi"]
[ext_resource type="Script" path="res://enemy/attack.gd" id="7_y5nf1"]
[ext_resource type="Texture2D" uid="uid://bg8qqfffhiwn8" path="res://graphics/exclamation.png" id="8_f1gpe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tpw7e"]
radius = 44.1814

[sub_resource type="CircleShape2D" id="CircleShape2D_k6sfd"]
radius = 44.0

[node name="red_soldier" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.25, 0.25)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_qpwe2")

[node name="RedSoldier" type="Sprite2D" parent="."]
position = Vector2(30, -18)
texture = ExtResource("2_l1pdt")

[node name="CollisionObstacles" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_tpw7e")

[node name="hp_module" parent="." instance=ExtResource("3_0kwgf")]
max_hp_amount = 40

[node name="moveto_module" type="Node" parent="."]
script = ExtResource("4_i6dln")

[node name="hitbox_module" parent="." node_paths=PackedStringArray("hp_module") instance=ExtResource("4_71tfk")]
collision_layer = 2
collision_mask = 8
hp_module = NodePath("../hp_module")

[node name="CollisionProjectiles" type="CollisionShape2D" parent="hitbox_module"]
shape = SubResource("CircleShape2D_k6sfd")

[node name="state_machine" parent="." instance=ExtResource("5_gp62a")]
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("6_h0cxi")

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource("7_y5nf1")

[node name="Exclamation" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(0, -104)
scale = Vector2(2.1, 2.02)
texture = ExtResource("8_f1gpe")

[node name="turn_around_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="BurstTimer" type="Timer" parent="."]
one_shot = true

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BulletStartPositions" type="Marker2D" parent="."]
position = Vector2(126, 22)

[connection signal="died_event_handler" from="hp_module" to="." method="_on_hp_module_died_event_handler"]
[connection signal="enemy_shoot" from="state_machine/attack" to="." method="_on_attack_enemy_shoot"]
[connection signal="timeout" from="turn_around_timer" to="state_machine/idle" method="_on_turn_around_timer_timeout"]
[connection signal="timeout" from="BurstTimer" to="state_machine/attack" method="_on_burst_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="state_machine/attack" method="_on_shoot_timer_timeout"]
